commented copy files content

--- a/src/app/advisories/advisories.component - Copy.html
+++ b/src/app/advisories/advisories.component - Copy.html
@@ -1,4 +1,4 @@
-<div style="margin: auto; max-width: 1000px; margin-top:50px">
+<!-- <div style="margin: auto; max-width: 1000px; margin-top:50px">
   <div>
       <b>ADVISOROES</b><br>
       <input #searchBox type="string" placeholder="Search List ..." (keyup)="search($event, searchBox.value)" class="form-control input-sm" style="display: inline-block; width: 300px">
@@ -47,4 +47,4 @@
     <span>{{item.title}}</span>
     <span>{{item.date}}</span>
  </div> -->
-
+ -->
